--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hono/node-server": "^1.19.9",
     "@mastra/core": "^1.4.0",
+    "@mastra/hono": "^1.1.3",
     "@mastra/libsql": "^1.4.0",
     "@mastra/loggers": "^1.0.1",
     "@mastra/memory": "^1.3.0",
