--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,9 @@
     "baseUrl": ".",
     "paths": {
       "@src/*": ["src/*"],
-      "@mastra/*": ["src/mastra/*"]
+      "@mastra/*": ["src/mastra/*"],
+      "@scripts/*": ["scripts/*"]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "scripts/lab"]
 }
