Add dev setup docs, CLI workflow, and TD handoff guidance

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "bun run --watch src/index.ts",
     "build": "tsc",
     "start": "bun run dist/index.js",
+    "cli": "bun run src/cli/index.ts",
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:coverage": "bun test --coverage",
@@ -25,6 +26,7 @@
     "@mastra/memory": "^1.3.0",
     "@mastra/observability": "^1.2.0",
     "hono": "^4.11.9",
+    "just-bash": "^2.10.2",
     "mastra": "^1.3.1",
     "ollama-ai-provider-v2": "^3.3.1",
     "remeda": "^2.33.6",
