--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "format:check": "biome format",
     "typecheck": "tsc --noEmit",
     "check": "biome check && tsc --noEmit",
-    "precommit": "bun run check && bun run test"
+    "precommit": "bun run lint && bun run typecheck",
+    "verify": "bun run check && bun run test"
   },
   "dependencies": {
     "@mastra/core": "^1.4.0",
