[td-fa8288] Implement Local Memory Agent and tests

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "typecheck": "tsc --noEmit",
     "check": "biome check && tsc --noEmit",
     "precommit": "bun run lint && bun run typecheck",
-    "verify": "bun run check && bun run test"
+    "verify": "bun run check && bun run test",
+    "forge": "bash scripts/forge.sh",
+    "finish": "bash scripts/finish.sh",
+    "ask": "bash scripts/ask.sh"
   },
   "dependencies": {
     "@mastra/core": "^1.4.0",
