Integrate OxLint with Biome formatting

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,7 @@
     "lineWidth": 100
   },
   "linter": {
-    "enabled": true,
+    "enabled": false,
     "rules": {
       "recommended": true
     }
