--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "verify": "bun run check && bun run test",
     "forge": "bash scripts/forge.sh",
     "finish": "bash scripts/finish.sh",
-    "ask": "bash scripts/ask.sh"
+    "ask": "bash scripts/ask.sh",
+    "env:setup": "bash scripts/setup-mastra-env.sh",
+    "env:export": "bash scripts/export-mastra-env.sh"
   },
   "dependencies": {
     "@mastra/core": "^1.4.0",
@@ -31,6 +33,7 @@
     "@mastra/loggers": "^1.0.1",
     "@mastra/memory": "^1.3.0",
     "@mastra/observability": "^1.2.0",
+    "citty": "^0.2.1",
     "hono": "^4.11.9",
     "just-bash": "^2.10.2",
     "mastra": "^1.3.1",
