--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mastra/hono": "^1.1.3",
     "@mastra/libsql": "^1.4.0",
     "@mastra/loggers": "^1.0.1",
+    "@mastra/mcp": "^1.0.2",
     "@mastra/memory": "^1.3.0",
     "@mastra/observability": "^1.2.0",
     "citty": "^0.2.1",
